--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,23 @@ script-files = [
     "bin/prg",
 ]
 
+
+[tool.setuptools.data-files]
+"share/doc/libprg" = [
+    "README.rst",
+]
+"share/libprg/mods" = [
+    'mods/cmd.pu',
+    'mods/fnd.py',
+    'mods/log.py',
+    'mods/mbx.py',
+    'mods/mod.py',
+    'mods/shp.py',
+    'mods/tdo.py',
+]
+
+
+
 [tool.setuptools.exclude-package-data]
 "*" = [
        "env*",
